# libremore

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/libremore/: allocator.h  allocator.inl  assert.h  buffer.h  buffer.inl  core.h  io.h  io.inl  macros.h  status.h
src/: allocator.c  core.c  main.c
